Fix thread-safety and false positives in offset liveness checks
- Replace unsafe `KafkaConsumer` reflection with thread-safe `MessageListenerContainer` APIs to avoid ConcurrentModificationExceptions.
- Add configurable `liveness.kafka.max-stalled-checks` property (default 3) to prevent false positives during long batches or manual commits.
- Update unit/integration tests and documentation for the new threshold and container architecture.